fix hover state colors on mobile menu

--- a/awx/ui/client/src/main-menu/main-menu.block.less
+++ b/awx/ui/client/src/main-menu/main-menu.block.less
@@ -264,7 +264,8 @@
 .MainMenu-item:hover,
 .MainMenu-logo:hover,
 .MainMenu-item.is-currentRoute {
-    color: @menu-link;
+    background-color: @default-tertiary-bg;
+    color: @default-icon;
 }
 
 // item on
